kxg2/test.txt
0
Traceback (most recent call last):
  File "check.py", line 14, in <module>
    compile(source,f,'exec')
  File "exec.py", line 9
     return a/b;;
                ^
 SyntaxError: invalid syntax
